Agent query: Is the application running without import errors now? Can you try accessing it?
Fix error in CodeAnalyzer.is_comment_line() and analyze two files (EmployeeEndpoint.java and ApplicationConfiguration.java).

Screenshot: https://storage.googleapis.com/screenshot-production-us-central1/889c856b-ca52-4062-9701-c73e5c568307/4fc7f484-2899-46ef-917f-3b473e438c57.jpg

--- a/MyApp_code_analysis_20250109_005509.html
+++ b/MyApp_code_analysis_20250109_005509.html
@@ -19,13 +19,13 @@
                 <h1>MyApp - Code Analysis Report</h1>
                 <div class="metadata">
                     <p><strong>Application Name:</strong> MyApp</p>
-                    <p><strong>Generated:</strong> 2025-01-09 00:39:54</p>
-                    <p><strong>Repository Path:</strong> /tmp/tmpsij4aujb</p>
+                    <p><strong>Generated:</strong> 2025-01-09 00:55:09</p>
+                    <p><strong>Repository Path:</strong> /tmp/tmpjk1vaxw6</p>
                 </div>
             </div>
             <div class="section">  
                 <h2>Summary</h2>  
-                <p>Files Analyzed: 1</p>  
+                <p>Files Analyzed: 2</p>  
                 <p>Unique Demographic Fields: 0 []</p>  
                 <p>Demographic Fields Occurrences Found: 0</p>  
                 <p>Integration Patterns Found: 0</p>  
@@ -40,7 +40,14 @@
                       
             <tr>  
                 <td>1</td>  
-                <td>/tmp/tmpsij4aujb/EmployeeEndpoint.java</td>  
+                <td>/tmp/tmpjk1vaxw6/EmployeeEndpoint.java</td>  
+                <td>0</td>  
+                <td>0</td>  
+            </tr>  
+              
+            <tr>  
+                <td>2</td>  
+                <td>/tmp/tmpjk1vaxw6/ApplicationConfiguration.java</td>  
                 <td>0</td>  
                 <td>0</td>  
             </tr>  
