Checkpoint before revert - Fix code snippet display in Analysis Results tab to remove HTML markup and show clean formatted code
Fix: Resolved error preventing analysis with lists of column references for x and y axes.

Screenshot: https://storage.googleapis.com/screenshot-production-us-central1/889c856b-ca52-4062-9701-c73e5c568307/e3cf9318-1385-445c-b123-bc1a2a3951ae.jpg

--- a/MyApp_CodeLens_20250215_172225.html
+++ b/MyApp_CodeLens_20250215_172225.html
@@ -19,13 +19,13 @@
                 <h1>MyApp - Code Analysis Report</h1>
                 <div class="metadata">
                     <p><strong>Application Name:</strong> MyApp</p>
-                    <p><strong>Generated:</strong> 2025-02-15 17:02:24</p>
-                    <p><strong>Repository Path:</strong> /tmp/tmpiu03kmco</p>
+                    <p><strong>Generated:</strong> 2025-02-15 17:22:25</p>
+                    <p><strong>Repository Path:</strong> D:\SOAPSpringExample\src</p>
                 </div>
             </div>
             <div class="section">
                 <h2>Summary</h2>
-                <p>Files Analyzed: 1</p>
+                <p>Files Analyzed: 0</p>
                 <p>Unique Demographic Fields: 0 []</p>
                 <p>Demographic Fields Occurrences Found: 0</p>
                 <p>Integration Patterns Found: 0</p>
